# plyometrics

./: .clang-format  .gitlab-ci.yml  CMakeLists.txt  README.md  main.cpp  nbench.hpp
.github/workflows/: main.yml
contrib/: run_all_examples.sh  visualize.py
examples/: CMakeLists.txt  README.md  compiler_hacks.cpp  containers.cpp  cpu_branch_prediction.cpp  cpu_phenomenons.cpp  example_basic.cpp  look_up_in_map.cpp  memory_fragmentation.cpp
memtrace/: CMakeLists.txt  main.cpp
nbench/: benchmark.hpp  clock.hpp  cmdline.hpp  compiler.hpp  loop.hpp  nbench.hpp  optional.hpp  output.hpp  random.hpp  registry.hpp  result.hpp  utils.hpp
plyometrics/: benchmark.hpp  clock.hpp  cmdline.hpp  compiler.hpp  cpu.hpp  loop.hpp  optional.hpp  output.hpp  plyometrics.hpp  ranges.hpp  registry.hpp  result.hpp  utils.hpp
tests/: CMakeLists.txt  options_tests.cpp  utils_tests.cpp
